Fixed overflow scrollbar showing, restored various menu items, fixed stats fm icon, and more.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,8 @@
 html {
   overflow-x: hidden;
   overscroll-behavior: none;
+  overflow-y: hidden;
+  color: white;
 }
 
 body {
